# mininix-auth

./: CMakeLists.txt  README.md  mininix-auth.c  mininix-auth.h  passwd.c  testauth.c
